<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/text_margin"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

'

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/br_icon"
                android:layout_marginRight="@dimen/text_margin"
                android:src="@drawable/ic_computer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/br_title"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/text_margin"
                android:fontFamily="@string/bold"
                android:text="Computer Science"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/title_size" />

        </LinearLayout>


        <TextView
            android:id="@+id/br_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:fontFamily="@string/regular"
            android:text="@string/about_computer"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/text_size" />



    </LinearLayout>


</com.google.android.material.card.MaterialCardView>